Add dirty bit for notifying when editor state changes